<?xml version="1.0"?>
<package format="3">
    <name>mesh_navigation</name>
    <version>2.0.0</version>
    <description>The mesh_navigation package provides a layered mesh_map implementation, a Move Base Flex mesh navigation server, as well as mesh navigation plugins for path planning and navigation control.</description>
    <maintainer email="matthias.holoch@naturerobots.com">Matthias Holoch</maintainer>
    <maintainer email="sebastian.puetz@naturerobots.com">Sebastian Pütz</maintainer>
    <license>BSD-3</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <exec_depend>mbf_mesh_core</exec_depend>
    <exec_depend>mbf_mesh_nav</exec_depend>
    <exec_depend>mesh_client</exec_depend>
    <exec_depend>mesh_controller</exec_depend>
    <exec_depend>mesh_layers</exec_depend>
    <exec_depend>mesh_map</exec_depend>
    <exec_depend>cvp_mesh_planner</exec_depend>
    <exec_depend>dijkstra_mesh_planner</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
