<?xml version="1.0"?>
<package format="2">
  <name>mesh_planner</name>
  <version>0.0.1</version>
  <description>The mesh_planner package</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mbf_abstract_core</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
