<?xml version="1.0"?>
<package format="2">
  <name>mesh_planner</name>
  <version>0.0.1</version>
  <description>The mesh_planner package</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mbf_mesh_core</depend>
  <depend>mesh_map</depend>

  <export>
    <mbf_mesh_core plugin="${prefix}/mesh_planner.xml" />
  </export>
</package>
