<?xml version="1.0"?>
<package format="2">
    <name>wave_front_planner</name>
    <version>0.1.1</version>
    <description>The wave_front_planner package</description>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <license>BSD 3-Clause</license>
    <author email="spuetz@uos.de">Sebastian Pütz</author>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>mbf_mesh_core</depend>
    <depend>mbf_utility</depend>
    <depend>mesh_map</depend>

    <export>
        <mbf_mesh_core plugin="${prefix}/wave_front_planner.xml"/>
    </export>
</package>
